# SeqFlush

./: .gitignore  Cargo.toml  README.md  test_rec.txt
run_sf/: Cargo.toml
run_sf/src/: main.rs
seq_flush/: Cargo.toml
seq_flush/src/: lib.rs
