[package]
name = "run_sf"
version = "0.1.0"
authors = ["Hanus Krett Hansen <hkh@82.211.205.205>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seq_flush = {path = "../seq_flush"}


[[bin]]
name ="server"
path = "src/bin/server.rs"

[[bin]]
name ="client"
path = "src/bin/client.rs"

[[bin]]
name = "main"
path = "src/main.rs"